new URI instead of new URL in tests, 4.