@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.GirlsOfDesireRipper;
 import org.junit.jupiter.api.Tag;
@@ -10,8 +11,8 @@ import org.junit.jupiter.api.Test;
 public class GirlsOfDesireRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testGirlsofdesireAlbum() throws IOException {
-        GirlsOfDesireRipper ripper = new GirlsOfDesireRipper(new URL("http://www.girlsofdesire.org/galleries/krillia/"));
+    public void testGirlsofdesireAlbum() throws IOException, URISyntaxException {
+        GirlsOfDesireRipper ripper = new GirlsOfDesireRipper(new URI("http://www.girlsofdesire.org/galleries/krillia/").toURL());
         testRipper(ripper);
     }
 }
